--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "astro-preact",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@astrojs/preact": "^1.2.0",
+    "@preact/signals": "^1.1.3",
     "astro": "^1.9.0",
     "preact": "^10.11.3"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.13",
-    "@unocss/preset-icons": "^0.48.0",
+    "@unocss/preset-icons": "^0.48.2",
     "unocss": "^0.48.0",
     "unocss-preset-scalpel": "^1.2.5",
     "vite": "^4.0.4",
